--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,28 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.card {
+  width: 100px;
+  height: 150px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin: 20px;
+}
+
+.spade::before {
+  content: "♠";
+}
+
+.heart::before {
+  content: "♥";
+}
+
+.club::before {
+  content: "♣";
+}
+
+.diamond::before {
+  content: "♦";
+}
